k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: tech-challenge
  labels:
    app: api
    tags.datadoghq.com/service: api
    tags.datadoghq.com/env: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
        tags.datadoghq.com/service: api
        tags.datadoghq.com/env: demo
    spec:
      serviceAccountName: api
      containers:
        - name: api
          image: ${IMAGE}
          ports:
            - name: http
              containerPort: 8080
          startupProbe:
            httpGet:
              path: /health
              port: http
            periodSeconds: 5
            failureThreshold: 30
          readinessProbe:
            httpGet:
              path: /health
              port: http
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: http
            periodSeconds: 10
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
        - name: datadog-agent
          image: gcr.io/datadoghq/agent:7.68.3
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              memory: "512Mi"
