k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: tech-challenge
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: ClusterIP
  selector:
    app: api
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
