k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api
  namespace: tech-challenge
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: tech-challenge-api
    networking.gke.io/managed-certificates: api
spec:
  rules:
    - host: api.vcosta-fiap.online
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: api
                port:
                  number: 80
